align footer credits, fix some css widgets and rename version.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://vnlweb.com/maquina
 Author: Vitor Lopes
 Author URI: http://vnlweb.com/
 Description: Hi. I'm a starter blank theme called <code>Maquina</code> based on underscores with 10 widget possitions, 4 in the header, 4 in the footer, one on the left side and one on the right side.
-Version: _s v1.30 Maquina v0.19
+Version: _s v1.30 Maquina v1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags:
@@ -604,7 +604,7 @@ object {
 	width: 22%;
 }
 
-.footer-widgets-container, .site-footer {
+.header-widgets-container .footer-widgets-container, .site-footer {
 	clear: both;
 	width: 100%;
 }
@@ -617,7 +617,7 @@ object {
 }
 
 .footer-widget-1, .footer-widget-2, .footer-widget-3, .footer-widget-4,
-.header-widget-1, .header-widget-2, .header-widget-3, .header-widget-4
+.header-widget-1, .header-widget-2, .header-widget-3, .header-widget-4,
 .right-widget-area, .left-widget-area, .content-area {
 	margin: 1%;
 }
@@ -627,6 +627,10 @@ object {
 	width: 50%;
 }
 
-.site-title {
-		
+.site-info {
+	display:inline-block;		
+}
+
+.site-footer {
+	text-align: center;
 }
